--- a/msi/picguard/Folders.wxs
+++ b/msi/picguard/Folders.wxs
@@ -5,7 +5,7 @@
         <Directory Id="INSTALLFOLDER" Name="!(bind.Property.ProductName)">
           <Directory Id="DATAFOLDER" Name="data">
             <Directory Id="FLUTTERASSETSFOLDER" Name="flutter_assets">
-              <Directory Id="FLUTTERFONTSFOLDER" Name="fonts" />
+              <Directory Id="FLUTTERFONTSFOLDER" />
               <Directory Id="FLUTTERLOGOFOLDER" Name="logo" />
               <Directory Id="FLUTTERPACKAGEFOLDER" Name="packages" />
               <Directory Id="SHADERSFOLDER" Name="shaders" />
