--- a/msi/picguard/Package.wxs
+++ b/msi/picguard/Package.wxs
@@ -19,8 +19,8 @@
       <!-- Flutter output -->
       <ComponentGroupRef Id="BaseComponents" />
       <ComponentGroupRef Id="DataComponents" />
+      <ComponentGroupRef Id="FontComponents" />
       <ComponentGroupRef Id="FlutterAssetComponents" />
-      <ComponentGroupRef Id="FlutterFontComponents" />
       <ComponentGroupRef Id="FlutterLogoComponents" />
       <ComponentGroupRef Id="FlutterPackageComponents" />
       <ComponentGroupRef Id="ShaderComponents" />
