Remove sentry_flutter component

--- a/msi/picguard/AppComponents.wxs
+++ b/msi/picguard/AppComponents.wxs
@@ -27,9 +27,6 @@
         <File Source="$(FlutterBuildOutputDir)\screen_retriever_plugin.dll" />
       </Component>
       <Component>
-        <File Source="$(FlutterBuildOutputDir)\sentry_flutter_plugin.dll" />
-      </Component>
-      <Component>
         <File Source="$(FlutterBuildOutputDir)\url_launcher_windows_plugin.dll" />
       </Component>
       <Component>
@@ -65,6 +62,18 @@
     </ComponentGroup>
 
     <ComponentGroup Id="FlutterLogoComponents" Directory="FLUTTERLOGOFOLDER">
+      <Component>
+        <File Source="$(FlutterBuildOutputDir)\data\flutter_assets\logo\logo-32.png" />
+      </Component>
+      <Component>
+        <File Source="$(FlutterBuildOutputDir)\data\flutter_assets\logo\logo-128.png" />
+      </Component>
+      <Component>
+        <File Source="$(FlutterBuildOutputDir)\data\flutter_assets\logo\logo-256.png" />
+      </Component>
+      <Component>
+        <File Source="$(FlutterBuildOutputDir)\data\flutter_assets\logo\logo-512.png" />
+      </Component>
       <Component>
         <File Source="$(FlutterBuildOutputDir)\data\flutter_assets\logo\logo.icns" />
       </Component>
