Update sentry to 8.10.1

--- a/msi/picguard/picguard/AppComponents.wxs
+++ b/msi/picguard/picguard/AppComponents.wxs
@@ -25,6 +25,9 @@
         <File Source="$(FlutterBuildOutputDir)\permission_handler_windows_plugin.dll" />
       </Component>
       <Component>
+        <File Source="$(FlutterBuildOutputDir)\sentry_flutter_plugin.lib" />
+      </Component>
+      <Component>
         <File Source="$(FlutterBuildOutputDir)\url_launcher_windows_plugin.dll" />
       </Component>
       <Component>
