fix: update sentry components

--- a/msi/picguard/picguard/AppComponents.wxs
+++ b/msi/picguard/picguard/AppComponents.wxs
@@ -13,6 +13,12 @@
         <Shortcut Name="PicGuard" Description="Your pictures, your signature." Directory="ProgramMenuFolder" Advertise="yes" Icon="PicGuard.exe" />
       </Component>
       <Component>
+        <File Source="$(FlutterBuildOutputDir)\crashpad_handler.exe" />
+      </Component>
+      <Component>
+        <File Source="$(FlutterBuildOutputDir)\crashpad_wer.dll" />
+      </Component>
+      <Component>
         <File Source="$(FlutterBuildOutputDir)\file_saver_plugin.dll" />
       </Component>
       <Component>
@@ -28,7 +34,7 @@
         <File Source="$(FlutterBuildOutputDir)\permission_handler_windows_plugin.dll" />
       </Component>
       <Component>
-        <File Source="$(FlutterBuildOutputDir)\sentry_flutter_plugin.lib" />
+        <File Source="$(FlutterBuildOutputDir)\sentry.dll" />
       </Component>
       <Component>
         <File Source="$(FlutterBuildOutputDir)\url_launcher_windows_plugin.dll" />
