--- a/msi/picguard/picguard/AppComponents.wxs
+++ b/msi/picguard/picguard/AppComponents.wxs
@@ -22,6 +22,9 @@
         <File Source="$(FlutterBuildOutputDir)\flutter_windows.dll" />
       </Component>
       <Component>
+        <File Source="$(FlutterBuildOutputDir)\irondash_engine_context_plugin.dll" />
+      </Component>
+      <Component>
         <File Source="$(FlutterBuildOutputDir)\msvcp140.dll" />
       </Component>
       <Component>
@@ -29,6 +32,12 @@
       </Component>
       <Component>
         <File Source="$(FlutterBuildOutputDir)\sentry.dll" />
+      </Component>
+      <Component>
+        <File Source="$(FlutterBuildOutputDir)\super_native_extensions.dll" />
+      </Component>
+      <Component>
+        <File Source="$(FlutterBuildOutputDir)\super_native_extensions_plugin.dll" />
       </Component>
       <Component>
         <File Source="$(FlutterBuildOutputDir)\tray_manager_plugin.dll" />
