fix(msi): build failed

--- a/msi/picguard/picguard/AppComponents.wxs
+++ b/msi/picguard/picguard/AppComponents.wxs
@@ -52,7 +52,7 @@
         <File Source="$(FlutterBuildOutputDir)\vcruntime140.dll" />
       </Component>
       <Component>
-        <File Source="$(FlutterBuildOutputDir)\LICENSE" />
+        <File Source="$(FlutterBuildOutputDir)\LICENSE.rtf" />
       </Component>
     </ComponentGroup>
 
