--- a/msi/picguard/picguard/Package.wxs
+++ b/msi/picguard/picguard/Package.wxs
@@ -1,9 +1,15 @@
-﻿<Wix xmlns="http://wixtoolset.org/schemas/v4/wxs">
+﻿<Wix xmlns="http://wixtoolset.org/schemas/v4/wxs"
+  xmlns:ui="http://wixtoolset.org/schemas/v4/wxs/ui">
+<?define PkgLicensePath = "$(env.LicensePath)" ?>
 <Package Name="PicGuard" Manufacturer="Insco" Version="2.5.4.447" UpgradeCode="62eb3032-f9fb-4440-8def-b9d7bdffd9f4">
     <MajorUpgrade DowngradeErrorMessage="!(loc.DowngradeError)" />
 
     <!-- Set an icon for Windows Settings > Apps -->
     <Property Id="ARPPRODUCTICON" Value="PicGuard.exe" />
+
+    <!-- User Interface -->
+    <WixVariable Id="WixUILicenseRtf" Value="$(PkgLicensePath)" />
+    <ui:WixUI Id="WixUI_InstallDir" InstallDirectory="INSTALLFOLDER" />
 
     <!-- Block 64-bit Win8/WinServer2012 (or earlier) and all 32-bit from installing -->
     <Launch Message="PicGuard only supports 64-bit Windows 10/11!" Condition="Installed OR VersionNT64 >= 603"/>
@@ -31,5 +37,5 @@
         <ComponentGroupRef Id="BaseComponents" />
         <ComponentRef Id="DesktopShortcutComponent"/>
     </Feature>
-  </Package>
+</Package>
 </Wix>
